added update method for roomtypes